# the-art-of-command-line

./: CMakeLists.txt  CenteredItemDelegate.h  ControlWindow.cpp  ControlWindow.h  DeviceControl.h  DeviceInfo.h  DeviceView.cpp  DeviceView.h  DeviceWidget.cpp  DeviceWidget.h  DeviceWindow.cpp  DeviceWindow.h  EventHub.cpp  EventHub.h  FileTransfer.h  Info.plist  LogWindow.cpp  LogWindow.h  Logger.h  MainWindow.h  NetworkUtils.h  README.md  RemoteDevice.cpp  RemoteDevice.h  RemoteFileExplorer.cpp  RemoteFileExplorer.h  RemoteFileExplorerWidget.cpp  RemoteFileExplorerWidget.h  TcpClient.cpp  TcpClient.h  TcpServer.cpp  TcpServer.h  TestWindow.cpp  TestWindow.h  ToastWidget.h  Tools.h  UdpClient.cpp  UdpClient.h  UdpTransport.cpp  UdpTransport.h  (+10 more)
.github/workflows/: ci.yml
icons/: Assets.car  Info.plist  Sharing
